Создан tests, добавлен входной параметр в ф-ии getInputData()

--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
-    <ProjectGuid>{1CC793CD-3B10-439E-8089-442F623E9006}</ProjectGuid>
+    <ProjectGuid>{9064AD88-63CC-41BD-A7B9-9E5A0F128FBF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>TestcopySubstring</RootNamespace>
+    <RootNamespace>tests</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectSubType>NativeUnitTestProject</ProjectSubType>
   </PropertyGroup>
@@ -162,7 +162,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Test_copySubstring.cpp" />
+    <ClCompile Include="tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
